crates/keron-lang/tests/corpus/errors/check/resource_kinds_remain_distinct.keron
val s: Symlink = symlink(source = "b", target = "a")

val f: Template = s
